--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,13 +12,21 @@ const { title } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="bg-black">
+	<body>
 		<slot />
 	</body>
 </html>
 <style is:global>
+
+  body {
+    background: linear-gradient( #FFC1A1, #FFB6C1, #A89FBD, #A8E4A0, #FFF4B2);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    min-height: 100vh;  /* Added line */
+    color: white;
+  }
 </style>
