--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,7 +61,7 @@ import {Image} from 'astro:assets'
           <li class="hover:underline">
             <a href="https://github.com/saori-eth" target="_blank">Github</a>
           </li>
-          <li>
+          <li class="hover:underline">
             <a href="https://twitter.com/saori_eth" target="_blank">Twitter</a>
           </li>
         </ul>
