--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import {Image} from 'astro:assets'
 ---
 
 <Layout title="Saori">
-  <div class="min-h-screen p-8 flex flex-col justify-center items-center">
+  <div class="min-h-screen p-8 flex flex-col justify-center items-center select-none">
     <header class="mb-4 flex justify-center items-center">
       <Image id="heart1" src={heart} alt="heart" width="100" height="100" class="m-4 hidden md:block" />
       <h1 class="header-style">
