--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,19 +17,24 @@ import {Image} from 'astro:assets'
     <div class="grid grid-cols-1 md:grid-cols-3 gap-4 max-w-screen-lg mx-auto">
 
       <section id="about" class="section-style col-span-3 md:col-span-3">
-        <h2 class=" mb-2">About Me</h2>
+        
         <p>
-          I began teaching myself to code late 2021. After trading crypto onchain for the previous year, it felt like a natural next step to learn to automate things I was racing to click on.
+          I got into coding in late 2021. After a few years of crypto trading, it seemed like the next logical step to start automating the stuff I was doing manually.
         </p>
         <br>
         <p>
-          I mostly focused on Solidity and Javascript. My learnings were accelertated by co-founding a profitable NFT company with a 10 year plus web dev veteran. My initial contribution was the smart contract, but I continued to code js on the frontend and backend until leaving.
+          My focus has mostly been on Solidity and JavaScript. Learnings accelerated when I co-founded an NFT company with a long term web dev. I started off working on the smart contract and later branched out into front-end and back-end JavaScript. Tons of React.
         </p>
         <br>
         <p>
-          Saori is an account which I created to get a fresh perspective on the crypto industry, and have a lower pressure environment to experiment in.
+          Since then, I’ve made it to the friendmex leaderboard by botting friendtech shares, and I experimented with my own web3 social app inspired by Tumblr.
+        </p>
+        <br>
+        <p>
+          Right now, I’m looking for something stable that I can get behind.
         </p>
       </section>
+      
 
       <section id="libs" class="section-style col-span-3 md:col-span-1">
         <h2 class=" mb-2">Favorite Libs</h2>
