--- a/src/layouts/Blog.astro
+++ b/src/layouts/Blog.astro
@@ -1,9 +1,8 @@
 ---
-import Header from "../components/Header.astro";
-import '@fontsource/ibm-plex-mono';
 interface Props {
 	title: string;
 }
+
 const { title } = Astro.props;
 ---
 
@@ -19,19 +18,19 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-    <Header />
-    <blog class="flex flex-col items-center justify-center min-h-screen">
-		<slot/>
-    </blog>
+    <div id="blog" class="p-4 flex flex-col items-center justify-center min-h-screen text-center">
+      <h1 class="text-4xl font-bold">{title}</h1>
+		<slot />
+    </div>
 	</body>
 </html>
 <style is:global>
+
   body {
     background: linear-gradient( #FFC1A1, #FFB6C1, #A89FBD, #A8E4A0, #FFF4B2);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     min-height: 100vh;  /* Added line */
     color: white;
-    font-family: 'IBM Plex Mono', cursive;
   }
 </style>
