--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,96 +1,27 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import heart from '../images/heart.png';
-import {Image} from 'astro:assets'
+import oreimo from '../images/oreimo.gif';
+import github from '../images/github.svg';
+import twitter from '../images/twitter.svg';
+import { Image } from 'astro:assets'
 ---
 
 <Layout title="Saori">
-  <div class="min-h-screen p-8 flex flex-col justify-center items-center select-none">
-    <header class="mb-4 flex justify-center items-center">
-      <Image id="heart1" src={heart} alt="heart" width="100" height="100" class="m-4 hidden md:block" />
-      <h1 class="header-style">
-        Saori Makishima
-      </h1>
-      <Image id="heart2" src={heart} alt="heart" width="100" height="100" class="m-4 hidden md:block" />
-    </header>
-
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-4 max-w-screen-lg mx-auto">
-
-      <section id="about" class="section-style col-span-3 md:col-span-3">
-        
-        <p>
-          I got into coding in late 2021. After a few years of crypto trading, it seemed like the next logical step to start automating the stuff I was doing manually.
-        </p>
-        <br>
-        <p>
-          My focus has mostly been on Solidity and JavaScript. Learnings accelerated when I co-founded an NFT company with a long term web dev. I started off working on the smart contract and later branched out into front-end and back-end JavaScript. Tons of React.
-        </p>
-        <br>
-        <p>
-          Since then, I’ve made it to the friendmex leaderboard by botting friendtech shares, and I experimented with my own web3 social app inspired by Tumblr.
-        </p>
-        <br>
-        <p>
-          Right now, I’m looking for something stable that I can get behind.
-        </p>
-      </section>
-      
-
-      <section id="libs" class="section-style col-span-3 md:col-span-1">
-        <h2 class=" mb-2">Favorite Libs</h2>
-        <ul>
-          <li>Drizzle ORM</li>
-          <li>ethers.js</li>
-          <li>wagmi</li>
-          <li>Viem</li>
-          <li>Rainbow Kit</li>
-          <li>three.js</li>
-          <li>Tailwind</li>
-        </ul>
-      </section>
-
-      <section id="frameworks" class="section-style col-span-3 md:col-span-1">
-        <h2 class="mb-2">Favorite Frameworks / Tools</h2>
-        <ul>
-          <li>Forge</li>
-          <li>next.js</li>
-          <li>Turborepo</li>
-          <li>pnpm</li>
-          <li>Planetscale</li>
-        </ul>
-      </section>
-
-      <section id="links" class="section-style col-span-3 md:col-span-1">
-        <h2 class="mb-2">Links</h2>
-        <ul>
-          <li class="hover:underline">
-            <a href="https://github.com/saori-eth" target="_blank">Github</a>
-          </li>
-          <li class="hover:underline">
-            <a href="https://twitter.com/saori_eth" target="_blank">Twitter</a>
-          </li>
-        </ul>
-      </section>
-
+  <div class="min-h-screen py-16 px-8 flex flex-col justify-center items-center select-none pt-24 md:pt-0">
+    <div class="w-full md:w-2/3 lg:w-1/2 p-8 rounded-lg shadow-xl backdrop-filter backdrop-blur-lg bg-black bg-opacity-25 border border-black">
+      <h1 class="text-4xl font-bold mb-6 text-left">Welcome</h1>
+      <p class="text-lg font-light mb-6 text-left">Hi, I'm Saori. I've been trading crypto full time since 2020. And I've been developing JS and Solidity since 2022</p>
+      <div class="flex justify-center">
+        <Image src={oreimo} alt="Saori's workspace" class="rounded-lg shadow-xl border border-black" />
+      </div>
+      <div class="flex justify-center mt-6">
+      <a href="https://github.com/saori-eth" target="_blank" rel="noopener noreferrer">
+      <Image src={github} alt="Github" class="w-8 h-8 inline-block mx-2" />
+      </a>
+      <a href="https://twitter.com/saori_eth" target="_blank" rel="noopener noreferrer">
+      <Image src={twitter} alt="Twitter" class="w-8 h-8 inline-block mx-2" />
+      </a>
+      </div>
     </div>
   </div>
 </Layout>
-
-<style>
-  h1:hover {
-    transform: scale(1.05);
-  }
-  #heart1:hover, #heart2:hover {
-    transform: rotate(360deg);
-    transition: transform 0.5s ease-in-out;
-  }
-  .section-style {
-    @apply bg-gray-800 bg-opacity-60 p-4 rounded-lg border border-white;
-  }
-  .header-style {
-    @apply text-6xl font-extrabold transition-all p-4 drop-shadow-[0_1.2px_1.2px_rgba(0,0,0,0.8)];
-  }
-  .image-style {
-    @apply m-4;
-  }
-</style>
