--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import { Image } from 'astro:assets'
   <div class="min-h-screen py-16 px-8 flex flex-col justify-center items-center select-none pt-24 md:pt-0">
     <div class="w-full md:w-2/3 lg:w-1/2 p-8 rounded-lg shadow-xl backdrop-filter backdrop-blur-lg bg-black bg-opacity-25 border border-black">
       <h1 class="text-4xl font-bold mb-6 text-left">Welcome</h1>
-      <p class="text-lg font-light mb-6 text-left">Hi, I'm Saori. I've been trading crypto full time since 2020. And I've been developing JS and Solidity since 2022</p>
+      <p class="text-lg font-light mb-6 text-left">Hi, I'm Saori. I've been trading crypto full time since 2020. And I've been developing JS and Solidity since 2022.</p>
       <div class="flex justify-center">
         <Image src={oreimo} alt="Saori's workspace" class="rounded-lg shadow-xl border border-black" />
       </div>
