--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const { title } = Astro.props;
     </blog>
 	</body>
 </html>
-<style is:global>
+<style>
   body {
     background: linear-gradient( #FFC1A1, #FFB6C1, #A89FBD, #A8E4A0, #FFF4B2);
     background-size: 100% 100%;
