--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,10 +1,6 @@
 ---
 import Header from "../components/Header.astro";
 import '@fontsource/ibm-plex-mono';
-interface Props {
-	title: string;
-}
-const { title } = Astro.props;
 ---
 
 <!doctype html>
@@ -16,7 +12,7 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
 		<meta name="generator" content={Astro.generator} />
     <meta name="theme-color" content="#FFC1A1">
-		<title>{title}</title>
+		<title>:3</title>
 	</head>
 	<body>
     <Header />
