--- a/src/layouts/Blog.astro
+++ b/src/layouts/Blog.astro
@@ -13,10 +13,35 @@ import BaseLayout from "./BaseLayout.astro";
     font-size: 2.5rem;
     font-weight: 600;
     margin-bottom: 1rem;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
   }
   post :global(h2) {
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: 600;
     margin-bottom: 1rem;
+    padding-top: 1rem;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
   }
+  post :global(h3) {
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-bottom: 1rem;
+    padding-top: 1rem;
+  }
+  post :global(a) {
+    color: var(--color-primary);
+    text-decoration: underline;
+    
+  }
+  post :global(ul) {
+    list-style: disc;
+    padding-left: 1rem;
+  }
+  @media (min-width: 768px) {
+  post {
+    max-width: 66.66%; /* Set the max-width to 2/3 of the parent element */
+    margin: 0 auto; /* This will center the post */
+    word-wrap: break-word; /* Ensures that long words will wrap and not extend outside the container */
+  }
+}
 </style>
